--- a/contactos.css
+++ b/contactos.css
@@ -34,7 +34,7 @@
     align-items: center;
 }
 body{
-    background-image: url(img/R\ \(3\).jpg);
+    background-image: url(/R\ \(3\).jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
