--- a/portfoli.css
+++ b/portfoli.css
@@ -23,7 +23,7 @@
     align-items: center;  
 }
 body{
-    background-image: url(img/fondo.jpg);
+    background-image: url(fondo.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
