--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
-      background-image: url(img/fondo.jpg);
+      background-image: url(fondo.jpg);
       background-blend-mode: multiply;
       display: flex;
       align-items: center;
@@ -201,7 +201,7 @@
       bottom: 0;
       width: 100%;
       height: 30px;
-      background-image: url(img/fondo.jpg);
+      background-image: url(fondo.jpg);
       color: black;
       text-align: center;
    }
