--- a/sobremi.css
+++ b/sobremi.css
@@ -14,7 +14,7 @@
     border-radius: 50px;
 }
 body{
-    background-image: url(img/fondo.jpg);
+    background-image: url(fondo.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
